carousel-hero-2026: mobile responsive fixed: moved indicators and arrows to the center, adjusted css title top spacing, added data set changes to touch listener in JS

--- a/content-types/current/hero-banner-carousel/css/main.css
+++ b/content-types/current/hero-banner-carousel/css/main.css
@@ -205,7 +205,7 @@
 
 .carousel-header .img-container .content {
   max-width: 60% !important;
-  top: 50%;
+  top: 48%;
   transform: translateY(-50%);
   left: 5rem !important;
 }
@@ -251,15 +251,25 @@
 /* TEST */
 .carousel-header .interactions {
   display: flex;
-  justify-content: space-between;
+  justify-content: end;
   position: absolute;
   bottom: 0;
-  left: 45%;
-  margin-bottom: .2rem;
+  /* left: 50%;
+  right: 50%; */
+  margin-bottom: 0.2rem;
+  margin-right: 1rem;
+  right: 0;
+  width: 100%;
 }
 
-.carousel-header .interactions .carousel-arrow {
-  font-size: 1.7rem;
+.carousel-header .interactions .arrow-interactions {
+  display: flex;
+
+  justify-content: center;
+}
+
+.carousel-header .interactions .arrow-interactions .carousel-arrow {
+  font-size: 2.2rem;
   position: unset;
   height: unset;
   width: unset;
@@ -271,20 +281,19 @@
   font-weight: 600;
 }
 
-.carousel-header .interactions .carousel-arrow.next {
-  padding-left: .3rem !important;
-  padding-right: .3rem !important;
-  margin-left: .2rem !important; 
+.carousel-header .interactions .arrow-interactions .carousel-arrow.next {
+  padding-left: 0.3rem !important;
+  padding-right: 0.3rem !important;
+  margin-left: 0.2rem !important;
 }
 
-.carousel-header .interactions .carousel-arrow.prev {
-  padding-right: .3rem !important;
-  padding-left: .3rem !important;
-  margin-right: .2rem !important;
+.carousel-header .interactions .arrow-interactions .carousel-arrow.prev {
+  padding-right: 0.3rem !important;
+  padding-left: 0.3rem !important;
+  margin-right: 0.2rem !important;
 }
 
-
-.carousel-header .carousel-indicators {
+.carousel-header .interactions .carousel-indicators {
   position: unset !important;
   align-items: center;
   margin: 0 !important;
