--- a/content-types/current/hero-banner-carousel/css/mobile.css
+++ b/content-types/current/hero-banner-carousel/css/mobile.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1180px) {
   .carousel-header .img-container .content .title {
-    font-size: 2.4rem
+    font-size: 2.4rem;
   }
 }
 
@@ -16,7 +16,51 @@
   } */
 
   .carousel-header .img-container {
-    height: 100%;
+    height: 500px !important;
     padding-bottom: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel-header .img-container .content {
+    position: absolute !important;
+    bottom: -20.5% !important;
+  }
+
+  /* .carousel-header .interactions {
+    left: 40%;
+  } */
+}
+
+@media only screen and (max-width: 520px) {
+  .carousel-header .img-container .content {
+    text-align: center !important;
+    max-width: 100% !important;
+    left: 0 !important;
+  }
+
+  .carousel-header .img-container .content .title {
+    font-size: 2rem;
+  }
+
+  /* .carousel-header .img-container .content .title {
+    font-size: 1.8rem
+  } */
+  .carousel-header .interactions {
+    margin-right: 0;
+  }
+
+  .carousel-header .interactions .arrow-interactions {
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 254px) {
+  .carousel-header .img-container .content {
+    bottom: -25.5% !important;
+  }
+
+  .carousel-header .img-container .content .title {
+    font-size: 1.6rem;
   }
 }
